--- a/README
+++ b/README
@@ -3,7 +3,10 @@ eTMB Score Calculation
 The TMB score for a given set of variants and ROI size can be calculated with the "generate_TMB_score.R" script. 
 
 Usage: 
-    Rscript generate_TMB_score.R --input-variants=variants.txt --roi_size 1200000 
+    Rscript generate_TMB_score.R --input_variants=TMB_high_example.txt --roi_size 1200000 
+
+    Running this script should take less than 5 seconds and will produce the files as below.  
+    The TMB_filtered_candidate_variants.txt will have 132 variants and the TMB_score.txt should be 110.
 
 Inputs:
     1. --input-variants: file with pre-filtered variants following formatting specifications (see below)
@@ -29,3 +32,16 @@ Output:
     The script will output two files:
     1. TMB_filtered_candidate_variants.txt - contains the filtered variants used to calculate the TMB score
     2. TMB_score.txt - lists the TMB score and number of filtered variants used to calculate the TMB score
+
+
+System Requirements: 
+    1. R software, available at https://www.r-project.org/.  This script was tested on version 3.6.2.
+    2. The tidyverse package for R.  This script was tested on version 1.3.1.
+    3. This software is compatible with Linux and macOS.
+
+
+Installation:
+
+No installation is required past the system requirements listed above.  
+Expect 30 minutes - 1 hour for full installation if the R software and tidyverse packages are not already available on the system.
+
